--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,18 +1,12 @@
-cmake_minimum_required(VERSION 3.10)
-project(euler_cpp)
+cmake_minimum_required(VERSION 3.12)
+project(euler_cpp LANGUAGES CXX)
 
 set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-# Include directories
-include_directories(include)
+file(GLOB SOURCES CONFIGURE_DEPENDS "src/*.cpp")
+file(GLOB TEST_SOURCES CONFIGURE_DEPENDS "tests/*.cpp")
 
-# Your source files
-set(SOURCES
-        src/problem_1.cpp
-)
+add_executable(test_runner ${SOURCES} ${TEST_SOURCES})
 
-# Test executable
-add_executable(test_runner
-        ${SOURCES}
-        tests/test_problem_1.cpp
-)
+target_include_directories(test_runner PRIVATE include)
